@@ -1,0 +1,8 @@
+#!perl
+
+use strict;
+use warnings;
+
+use Test::More tests => 1;
+
+use_ok 'Keyword::With';
